# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.307 2014/08/07 00:08:01 vapier Exp $

*timezone-data-2014f (07 Aug 2014)

  07 Aug 2014; Mike Frysinger <vapier@gentoo.org>
  +files/timezone-data-2014f-makefile.patch, +timezone-data-2014f.ebuild:
  Version bump.

  30 Jul 2014; Mike Frysinger <vapier@gentoo.org> timezone-data-2014e.ebuild:
  Make upgrade logic more robust #506570 by Cănărău Constantin.

  30 Jul 2014; Mike Frysinger <vapier@gentoo.org> timezone-data-2014d.ebuild:
  Stabilize for all.

  07 Jul 2014; Christoph Junghans <ottxor@gentoo.org>
  timezone-data-2014e.ebuild:
  fix double prefix (bug #516398)

*timezone-data-2014e (14 Jun 2014)

  14 Jun 2014; Mike Frysinger <vapier@gentoo.org> +timezone-data-2014e.ebuild,
  metadata.xml:
  Version bump.  Add USE=right_timezone to control install of the "right"
  timezones.

*timezone-data-2014d (28 May 2014)

  28 May 2014; Dirkjan Ochtman <djc@gentoo.org> +timezone-data-2014d.ebuild:
  Version bump timezone-data to 2014d (fixes bug 510422)

  15 May 2014; Dirkjan Ochtman <djc@gentoo.org> timezone-data-2014a.ebuild:
  Stabilize timezone-data-2014a for everyone

*timezone-data-2014c (15 May 2014)

  15 May 2014; Dirkjan Ochtman <djc@gentoo.org> +timezone-data-2014c.ebuild:
  Version bump timezone-data to 2014c

*timezone-data-2014b (25 Mar 2014)

  25 Mar 2014; Mike Frysinger <vapier@gentoo.org> +timezone-data-2014b.ebuild:
  Version bump.

*timezone-data-2014a (10 Mar 2014)

  10 Mar 2014; Mike Frysinger <vapier@gentoo.org> +timezone-data-2014a.ebuild:
  Version bump.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> timezone-data-2013d.ebuild,
  timezone-data-2013f-r1.ebuild, timezone-data-2013g.ebuild,
  timezone-data-2013h.ebuild, timezone-data-2013i.ebuild:
  Add arm64 love.

*timezone-data-2013i (19 Dec 2013)
