@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.307 2014/08/07 00:08:01 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.308 2014/08/08 07:23:09 vapier Exp $
+
+  08 Aug 2014; Mike Frysinger <vapier@gentoo.org> timezone-data-2014e.ebuild,
+  timezone-data-2014f.ebuild:
+  Fix get_TIMEZONE output #519256 by Daniel Kenzelmann.
 
 *timezone-data-2014f (07 Aug 2014)
 
